# crate-spec

./: .gitignore  README.md
crate-spec/: Cargo.toml
crate-spec/src/: main.rs  pack.rs  unpack.rs
crate-spec/src/utils/: context.rs  decode.rs  encode.rs  from_toml.rs  mod.rs  pkcs.rs
crate-spec/src/utils/package/: bin.rs  gen_bincode.rs  mod.rs
crate-spec/test/: args.txt
crate-spec/test/example/: decode_crate.sh  encode_crate.sh  hack_file.sh
crate-spec/test/output/: crate-spec-0.1.0-metadata.txt  crate-spec-0.1.0.crate  crate-spec-0.1.0.scrate
src/: main.rs  pack.rs  unpack.rs
src/utils/: context.rs  decode.rs  encode.rs  from_toml.rs  mod.rs  pkcs.rs
src/utils/package/: bin.rs  gen_bincode.rs  mod.rs
test/: cert1.pem  test.toml
test/example/: hack.py
