[package]
name = "crate-spec"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version = "2.0.0-rc.3", features = ["serde", "alloc"]}
openssl = "0.10.53"
toml = "0.7.4"
clap = {version = "4.3.0", features = ["derive"]}